--- a/.env
+++ b/.env
@@ -26,9 +26,10 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_USERNAME=6c7692496a87fc
+MAIL_PASSWORD=5dfa7302aca4c9
+MAIL_FROM_ADDRESS=piaya.devs@gmail.com
+MAIL_FROM_NAME=Piaya-Developers
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
